# learn-opengl-tutorial

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
odin/01_Getting-started/Hello-Triangle/: main.odin
odin/01_Getting-started/Shaders/: main.odin  triangle.frag  triangle.vert
other/bookofshaders/: README.md  basics1.glsl  basics2.glsl  basics3.glsl  glow.glsl  grid.glsl  index.html  main.js  smooth_triangle.glsl  stripes.glsl  triangle1.glsl  triangle2.glsl  triangle3.glsl  triangle4.glsl  triangle5.glsl  triangle6.glsl  triangle7.glsl  triangle8.glsl
src/: glad.c  main.c
src/01_Getting-started/Hello-Triangle/: ex1.c  ex2.c  ex2b.c  ex3.c  lesson.c
src/01_Getting-started/Shaders/: lesson.c
src/01_Getting-started/Shaders/a/: lesson.c  triangle.frag
src/01_Getting-started/Shaders/b/: lesson.c  triangle.frag
src/01_Getting-started/Shaders/c/: lesson.c  triangle.frag  triangle.vert
